Fixup openapi spec

--- a/dotCMS/src/main/resources/dotcms-config-cluster.properties
+++ b/dotCMS/src/main/resources/dotcms-config-cluster.properties
@@ -63,6 +63,7 @@ ES_ENDPOINTS=http://localhost:9200
 #ES_PROTOCOL=https
 #ES_HOSTNAME=localhost
 #ES_PORT=9200
+ES_PROTOCOL=http
 
 ##These settings must be changed on production environments
 #ES_AUTH_TYPE can take any of the following values: BASIC or JWT.
