--- a/dotCMS/src/main/resources/db.properties
+++ b/dotCMS/src/main/resources/db.properties
@@ -1,8 +1,8 @@
 ##Postgres default configuration
 driverClassName=org.postgresql.Driver
 jdbcUrl=jdbc:postgresql://localhost/dotcms
-username=dotcms
-password=dotcms
+username=postgres
+password=postgres
 
 ##MySQL default configuration
 ##driverClassName=com.mysql.jdbc.Driver
